--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "antd": "^5.12.2",
     "moment": "^2.29.4",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
