--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Family Chores",
+  "name": "family-chores",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "antd": "^5.12.2",
+    "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
