--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.17",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -27,6 +28,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "antd": "^5.12.2",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "next": "^13.4.19",
