--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:no-lint": "next build",
     "db:push": "prisma db push",
     "dev": "next dev",
     "postinstall": "prisma generate",
@@ -34,6 +35,7 @@
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
     "nodemailer": "^6.9.5",
+    "npm": "^10.4.0",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
@@ -58,7 +60,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
