--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,16 @@ on:
 
 jobs:
   build:
+    env:
+      DATABASE_URL: ${{secrets.DATABASE_URL}}
+      NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
+      NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
+      EMAIL_SERVER_USER: "blank"
+      EMAIL_SERVER_PASSWORD: "blank"
+      EMAIL_SERVER_HOST: "BLANK"
+      EMAIL_SERVER_PORT: 'BLANK'
+      EMAIL_FROM: "BLANK"
+      
     runs-on: ubuntu-latest
     steps:
       -
