--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,9 @@ on:
       - main
 
 jobs:
-  build:
-    
-      
+  build:   
     runs-on: ubuntu-latest
+    environment: prod
     steps:
       -
         name: Checkout
@@ -22,16 +21,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build Next
-        env:
-          DATABASE_URL: ${{secrets.DATABASE_URL}}
-          NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
-          NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
-          EMAIL_SERVER_USER: "blank"
-          EMAIL_SERVER_PASSWORD: "blank"
-          EMAIL_SERVER_HOST: "BLANK"
-          EMAIL_SERVER_PORT: 'BLANK'
-          EMAIL_FROM: "BLANK"
         run: docker build -t csmith661/react-fc .
+          
 
       -
         name: Push Next
